--- a/app/src/main/res/layout/candidato_layout.xml
+++ b/app/src/main/res/layout/candidato_layout.xml
@@ -1,7 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
                                                    android:orientation="vertical"
                                                    android:layout_width="match_parent"
-                                                   android:layout_height="match_parent" android:id="@+id/linearLayout3">
+                                                   android:layout_height="wrap_content" android:id="@+id/linearLayout3">
 
+    <TextView
+            android:text="TextView"
+            android:layout_width="0dp"
+            android:layout_height="0dp" android:id="@+id/textViewId" tools:visibility="invisible"
+    />
+    <TextView
+            android:text="TextView"
+            android:layout_width="384dp"
+            android:layout_height="34dp"
+            android:id="@+id/textViewEmail" android:textSize="18sp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="43dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="192dp"
+            android:layout_height="35dp"
+            android:id="@+id/editNovoNome"
+            android:textSize="18sp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="192dp"
+            android:layout_height="34dp"
+            android:id="@+id/textViewDtNasc"
+            android:textSize="18sp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="200dp" android:layout_marginStart="200dp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="192dp"
+            android:layout_height="34dp"
+            android:id="@+id/textViewTelefone" android:textSize="18sp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="77dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="200dp" android:layout_marginStart="200dp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="192dp"
+            android:layout_height="34dp"
+            android:id="@+id/textViewPerfil" android:textSize="18sp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="77dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
