--- a/app/src/main/res/layout/producao_layout.xml
+++ b/app/src/main/res/layout/producao_layout.xml
@@ -7,12 +7,21 @@
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/linearLayout2">
     <TextView
-            android:id="@+id/textCategoriaProducao"
-            android:layout_width="match_parent"
+            android:id="@+id/textIDProducao"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:padding="5dp"
-            android:text="cat" android:layout_height="wrap_content"
-            tools:layout_editor_absoluteY="78dp" app:layout_constraintStart_toStartOf="@+id/textIDProducao"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="@+id/textIDProducao"/>
+            android:visibility="invisible"
+            android:text="id"
+            tools:layout_editor_absoluteY="2dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
+    <TextView
+            android:id="@+id/textCategoriaProducao"
+            android:layout_width="187dp"
+            android:padding="5dp"
+            android:text="cat" android:layout_height="31dp"
+            app:layout_constraintStart_toEndOf="@+id/textDtInicio" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="74dp"/>
     <TextView
             android:id="@+id/textDescricao"
             android:layout_height="wrap_content"
@@ -20,23 +29,22 @@
             android:padding="5dp"
             android:text="desc"
             android:layout_span="2"
-            tools:layout_editor_absoluteY="45dp" app:layout_constraintStart_toStartOf="@+id/textCategoriaProducao"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="@+id/textCategoriaProducao"/>
+            app:layout_constraintStart_toStartOf="@+id/textCategoriaProducao"
+            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintEnd_toEndOf="@+id/textCategoriaProducao"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
     <TextView
             android:id="@+id/textTitulo"
             android:layout_width="match_parent"
             android:padding="5dp"
             android:text="titulo"
             android:layout_span="2" android:layout_height="wrap_content"
-            tools:layout_editor_absoluteY="8dp" app:layout_constraintStart_toStartOf="@+id/textDescricao"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="@+id/textDescricao"/>
+            app:layout_constraintStart_toStartOf="@+id/textDescricao"
+            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="@+id/textDescricao"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="2dp"/>
     <TextView
-            android:id="@+id/textIDProducao"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:visibility="visible"
-            android:text="id"
-            tools:layout_editor_absoluteY="115dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"/>
+            android:text="dt_inicio"
+            android:layout_width="222dp"
+            android:layout_height="31dp"
+            android:id="@+id/textDtInicio" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="74dp" app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
