--- a/app/src/main/res/layout/producao_layout.xml
+++ b/app/src/main/res/layout/producao_layout.xml
@@ -47,4 +47,12 @@
             android:layout_height="31dp"
             android:id="@+id/textDtInicio" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="74dp" app:layout_constraintStart_toStartOf="parent"/>
+    <View
+            android:id="@+id/divider3"
+            android:layout_width="395dp"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="103dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
